New in v1.1.10 (????/??/??)
---------------------------

Sockets don't have extended attributes -- don't try to access them.
(Patch from Andrew Ferguson.)

Fix restore from read-only bug -- rx perms on a repository directory are
enough, no need for write perms when restoring.  (patch from Andrew Price)

Fix --list-increments bug in set_must_escape_dos_devices.
(Marc Dyksterhouse)


New in v1.1.9 (2007/01/29)
--------------------------

Cygwin generates OSError when changing permissions on partitions.
(Patch from Andrew Ferguson.)

Fix fs_abilities.py patch error with set_escape_dos_devices.
(Marc Dyksterhouse)

Glob escaping support via backslash.  (Andrew Price)


New in v1.1.8 (2007/01/29)
--------------------------

Cygwin generates EACCESS on fsync -- so accept it rather than dieing.
(Marc Dyksterhouse).

Add "FilenameMapping.set_init_quote_vals" security exception.
(Marc Dyksterhouse)

Escape DOS device filenames when necessary.  Adjust DOS filename
quoting to work properly with cygwin.  (Marc Dyksterhouse)

Allow for preservation of FinderInfo for folders and fix typo
in Time.py. (Patch from Andrew Ferguson.)

Test for symlink permissions support to avoid unncessary syscalls on
platforms that don't support them. (Patch from Andrew Ferguson.)

RPM specfile update from Gordon Rowell.


New in v1.1.7 (2006/11/12)
--------------------------

Fix showstopper problem on OSX handling pre-1.1.6 rdiff-backup metadata.
(Patch from Andrew Ferguson.)


New in v1.1.6 (2006/11/11)
--------------------------

Man page update from roland <devzero@web.de>.

--min-file-size/--max-file-size support.  (Patch from Wout Mertens.)

Mac OS X Extended Attributes support.  (Patch from Andrew Ferguson.)

Preserve Mac OS X 'Creation Date' field across backups.  (Patch from Andrew
Ferguson.)

Set symlink permissions properly.  (Patch from Andrew Ferguson.)

Selection fix: empty directories could sometimes be improperly
excluded if certain include expressions involving a non-trailing '**'